# qeman

./: .gitignore  README.md  pyproject.toml
qeman/: dotfiles.py  logs.py  main.py  ps.py  qmp.py
qeman.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ugly/: grow_guest  min-zsh  setup  setup-dev
