[project]
name = "qeman"
version = "0.2.0"
requires-python = ">=3.8"
description = "A Quick EMulator MANager"
authors = [{ name = "Joaquin", email = "joaquinlpereyra@gmail.com" }]
dependencies = [
    "typer[all]",
    "tomli; python_version < '3.11'",
    "psutil>=7.0.0",
]

[project.scripts]
qeman = "qeman.main:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qeman"]