[project]
name = "qeman"
version = "0.7.0"
requires-python = ">=3.11"
description = "A Quick EMulator MANager"
authors = [{ name = "Joaquin", email = "joaquinlpereyra@gmail.com" }]
dependencies = [
    "typer-slim==0.17.4",
]

[project.scripts]
qeman = "qeman.main:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qeman"]
